<resources>

    <!-- Preferences strings Appearance -->
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_title_theme">Theme</string>

    <string-array name="pref_theme_list_titles">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Preferences strings Synchronization -->
    <string name="pref_category_sync">Synchronization</string>
    <string name="pref_title_sync">Sync quotes</string>
    <string name="pref_sync_language_summary">Languages you want to sync from our database</string>
    <string name="pref_title_choose_sync_languages">Languages</string>
    <string-array name="pref_sync_language_titles">
        <item>English</item>
        <item>Spanish</item>
        <item>Italian</item>
    </string-array>
    <string-array name="pref_sync_language_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_sync_language_default_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="button_cancel">Cancel</string>
    <string name="button_ok">Ok</string>

    <!-- Navigation Drawer -->

    <string name="nav_all_quote">All Quotes</string>
    <string name="nav_music_quote">Music Quotes</string>
    <string name="nav_book_quote">Book Quotes</string>
    <string name="nav_movie_quote">Movie Quotes</string>
    <string name="nav_personal_quote">Personal Quotes</string>
    <string name="nav_share">Share</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="action_search">Search</string>

    <string name="section_configuration">Configuration</string>
    <string name="section_comunication">Communicate</string>

    <!-- Feedback -->
    <string name="clipboard">Quote copied to clipboard.</string>
    <string name="dialog_input">Enter your quote:</string>
    <string name="error_edit">Required field!</string>
    <string name="removed">Removed Complete</string>
    <string name="undo">UNDO</string>
    <string name="shared">Quote Correctly Shared</string>
    <string name="added">Quote Added</string>
    <string name="cant_share">Can`t share quotes without phone permission</string>
    <string name="permission_explication">We need this permission to share quotes</string>

    <!-- Otros -->
    <string name="music_quote">Music Quote</string>
    <string name="book_quote">Book Quote</string>
    <string name="movie_quote">Movie Quote"</string>
    <string name="personal_quote">Personal Quote</string>

    <string name="author">Author:</string>
    <string name="quote">Quote:</string>

    <string name="admin_action_modify">Modify</string>
    <string name="admin_action_remove">Remove</string>
    <string name="admin_action_copy">Copy to Clipboard</string>
    <string name="admin_action_share_with_us">Share to AndIag</string>

    <string name="banner_ad_unit_id">ca-app-pub-8222490880990474/4659179146</string>

    <!-- Autogenerated strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recyclerview_animators">Library to easily create RecyclerView with animations.</string>
    <string name="fabicon">Yet another implementation of Floating Action Button for Android with lots of features.</string>
    <string name="firebase">Library to acces Firebase DB</string>

</resources>
