<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/music"
            android:title="@string/nav_all_quote" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/music"
            android:title="@string/nav_music_quote" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/book"
            android:title="@string/nav_book_quote" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/movie"
            android:title="@string/nav_movie_quote" />
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/personal"
            android:title="@string/nav_personal_quote" />
    </group>

    <item android:title="@string/section_comunication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_24dp"
                android:title="@string/nav_share" />
        </menu>
    </item>

    <item android:title="@string/section_configuration">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>