<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_appearance">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_theme_list_titles"
            android:entryValues="@array/pref_theme_list_values"
            android:key="theme_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_theme" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_sync">
        <SwitchPreference
            android:defaultValue="true"
            android:key="must_sync"
            android:summary=""
            android:title="@string/pref_title_sync" />

        <MultiSelectListPreference
            android:defaultValue="@array/pref_sync_language_default_values"
            android:entries="@array/pref_sync_language_titles"
            android:entryValues="@array/pref_sync_language_values"
            android:key="sync_languages"
            android:negativeButtonText="@string/button_cancel"
            android:positiveButtonText="@string/button_ok"
            android:summary="@string/pref_sync_language_summary"
            android:title="@string/pref_title_choose_sync_languages" />
    </PreferenceCategory>
</PreferenceScreen>