<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/add_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        fab:menu_colorNormal="?attr/colorPrimary"
        fab:menu_colorPressed="?attr/colorPrimaryDark"
        fab:menu_colorRipple="@color/white"
        fab:menu_fab_size="normal"
        fab:menu_labels_position="left"
        fab:menu_labels_style="@style/menu_labels_style">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/sub_music"
            android:layout_width="@dimen/fab_size_mini"
            android:layout_height="@dimen/fab_size_mini"
            fab:fab_colorNormal="@color/music"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_label="@string/music_quote"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/sub_book"
            android:layout_width="@dimen/fab_size_mini"
            android:layout_height="@dimen/fab_size_mini"
            fab:fab_colorNormal="@color/book"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_label="@string/book_quote"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/sub_movie"
            android:layout_width="@dimen/fab_size_mini"
            android:layout_height="@dimen/fab_size_mini"
            fab:fab_colorNormal="@color/movie"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_label="@string/movie_quote"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/sub_personal"
            android:layout_width="@dimen/fab_size_mini"
            android:layout_height="@dimen/fab_size_mini"
            fab:fab_colorNormal="@color/personal"
            fab:fab_colorPressed="@color/white_pressed"
            fab:fab_label="@string/personal_quote"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal|bottom"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
</RelativeLayout>