<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="andiag.coru.es.lolinfo.activities.ActivitySummoner">

    <ImageView
        android:id="@+id/appNameImage"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/andiag" />

    <ImageButton
        android:id="@+id/imageGoogle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:onClick="onGoogleButtonClick"
        android:scaleType="fitXY"
        android:src="@drawable/gplus" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/andiag"
        android:tint="@color/lightPrimary" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/logoImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/appNameImage"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="RecyclerView-Animators:"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/recyclerview_animators"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Clans-Fabicon:"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/fabicon"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Firebase:"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/firebase"
                android:textAppearance="@android:style/TextAppearance.Small" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>